tweaking icon size and alignment

--- a/event_host_tools.html
+++ b/event_host_tools.html
@@ -161,6 +161,11 @@ a.cancel-link:hover,
 #event-host-links .cancel-link{
 	color:red;}
 
+.host-tool::before{
+  display:inline-block;
+  text-align:center;
+  width:1.1em;}
+
 </style>
 
 <div id="ak-confirmation" class="ak-confirmation">
@@ -220,8 +225,8 @@ a.cancel-link:hover,
 	{% else %}
 			    <!-- Flag that the functionality will be there -->
 			    <li class="if-js">
-						<span class="host-tool">
-							<span class="opacity-50 text-strong icon-before icon-faded" data-icon="&#xE900;">{% filter ak_text:"event_host_tools_email_attendees" %}Email attendees{% endfilter %}</span><br>
+						<span class="host-tool icon-before icon-faded" data-icon="&#xE900;">
+							<span class="opacity-50 text-strong">{% filter ak_text:"event_host_tools_email_attendees" %}Email attendees{% endfilter %}</span><br>
 				      <span class="opacity-50 text-small2">{% filter ak_text:"event_host_tools_email_attendees_disabled" %}(Available after people sign up for your event.){% endfilter %}</span>
 						</span>
 			    </li>
@@ -230,9 +235,9 @@ a.cancel-link:hover,
 		    	<li class="if-js"><a class="jump-link host-tool icon-before icon-faded" data-icon="&#xE904;"  id="add-attendees-link" href="#attendees-add">Add Attendees</a></li>
 	{% endif %}
 	{% if event.is_open_for_signup and page.pagefollowup.send_taf %}
-		    	<li class="if-js"><a class="jump-link host-tool icon-before icon-faded" data-icon="&#xE94E;" id="invite-friends-link" href="#invite-friends">Invite friends</a></li>
+		    	<li class="if-js"><a class="jump-link host-tool icon-before icon-faded" data-icon="&#xE933;" id="invite-friends-link" href="#invite-friends">Invite friends</a></li>
 	{% endif %}
-			    <li><a class="logout-link host-tool icon-before icon-faded" data-icon="&rarr;" href="/logout/">Log out</a></li>
+			    <li><a class="logout-link host-tool icon-before icon-faded" data-icon="&#xE94E;" href="/logout/">Log out</a></li>
 					<li><a class="cancel-link host-tool icon-before icon-faded" data-icon="&#xE943;" confirm-message="Really cancel event? This can't be undone." href="../cancel_event/">{% filter ak_text:"event_host_tools_cancel" %}Cancel event{% endfilter %}</a></li>
 			  </ul>
 			  <!-- Message from mothership -->
