--- a/donate.html
+++ b/donate.html
@@ -190,7 +190,7 @@
 {% elif page.derived.use_account_switcher %}
 
 									<div id="ak-multi-currency">
-										<label class="text-small2 text-caps text" for="amount">{% filter ak_text:"general_currency" %}Currency{% endfilter %}</label> 
+										<label class="text-small2 text-caps" for="amount">{% filter ak_text:"general_currency" %}Currency{% endfilter %}</label>
 										<select id="ak-currency-switcher" name="payment_account" class="ak-currencies">
 	{% for currency, account_name in page.derived.currency_accounts %}
 								    <option class="ak-currency" {% if forloop.first %}checked{% endif %} id="id_currency_{{currency}}" value="{{account_name}}">{{currency}}</option>
@@ -252,7 +252,7 @@
                 <input type="hidden" name="donation_type" value="single">
                         {% else %}
                 <div id="ak-recurring-type" class="ak-donate-area-step-1 margin-bottom-small form-style-labelabove">
-                    <div class="input-checkbox text-large text-strong margin-bottom-none">
+                    <div class="input-checkbox text-strong margin-bottom-none">
                         <input type="checkbox" name="donation_type" id="id_donation_type_recurring" value="recurring"> <label for="id_donation_type_recurring" class="text-strong">{% filter ak_text:"donate_make_recurring" %}Make this a monthly donation.{% endfilter %}</label>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
 
                 {% if page.custom_fields.donation_show_inhonorof|lower == "show" %}
                 <fieldset id="in-honor-of" class="ak-donate-area-step-1 form-style-labelabove">
-                    <div class="input checkbox input-checkbox margin-top-none text-large text-strong">
+                    <div class="input checkbox input-checkbox margin-top-none text-strong">
                         <input type="checkbox" value="1" name="inhonorcheck" id="in-honor-check" />
                         <label for="in-honor-check">{% filter ak_text:"donate_inhonorof_option_label" %}Donate in someone's honor.{% endfilter %}</label>
                     </div>
