--- a/wrapper.html
+++ b/wrapper.html
@@ -136,8 +136,8 @@ actionkit.forms.initForm('act');
 	{% else %}
 			<span class="text-large2"><a id="footer-logo" class="tf-logo text-large3" href="http://350.org/">350.org</a></span> &nbsp; /
 	{% endif %}
-	{% if templateset.custom_fields.footer_menu_html %}
-			{{ templateset.custom_fields.footer_menu_html }}
+	{% if templateset.custom_fields.site_footer_html %}
+			{{ templateset.custom_fields.site_footer_html }}
 	{% else %}
 			 &nbsp;&nbsp; <a href="{% filter ak_text:"footer_about" %}http://350.org/how{% endfilter %}">{% filter ak_text:"footer_about" %}About{% endfilter %}</a> /{% ifequal page.type "Donation" %} {% else %} <a
 	href="{% filter ak_text:"footer_donate_url" %}http://350.org/donate{% endfilter %}">{% filter ak_text:"footer_donate" %}Donate{% endfilter %}</a> / {% endifequal%}<a id="privacy-link" href="{% filter ak_text:"footer_privacy_url" %}http://350.org/en/privacy{% endfilter %}">{% filter ak_text:"footer_privacy" %}Privacy{% endfilter %}</a> / <a href="{% filter ak_text:"footer_contact_url" %}http://350.org/en/contact/{% endfilter %}">{% filter ak_text:"footer_contact" %}Contact{% endfilter %}</a>
