SSL prep: replacing http:// links with https://
switching all links to https://

and also changing s3.350.org.s3.amazonaws.com links, because apparently AWS' wildcard SSL doesn't cover that many subdomains

--- a/donate.html
+++ b/donate.html
@@ -541,25 +541,25 @@
 		{% endif %}
 		<p><img style="float:right;margin:0 0 1em 1em;" src="https://s3.amazonaws.com/s3.350.org/images/RapidSSL_SEAL-90x50.gif" height="40" width="70" alt="This site is secured by RapidSSL" />
 			{% filter ak_text:"donate_security" %}
-			<strong class="text-small-caps">Security:</strong> This page uses <a href="http://en.wikipedia.org/wiki/HTTP_Secure" target="_blank">Secure HTTP</a> and <a href="http://en.wikipedia.org/wiki/Transport_Layer_Security" target="_blank">SSL</a> technologies to make sure your information is 100% secure.
+			<strong class="text-small-caps">Security:</strong> This page uses <a href="https://en.wikipedia.org/wiki/HTTP_Secure" target="_blank">Secure HTTP</a> and <a href="https://en.wikipedia.org/wiki/Transport_Layer_Security" target="_blank">SSL</a> technologies to make sure your information is 100% secure.
 			{% endfilter %}
 		</p>
 		{% if page.custom_fields.page_is_c4 %}
 		<p><strong class="text-small-caps">Contact Us:</strong>Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350action.org</a>.</p>
-		<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350action.org/update">350action.org/update</a></p>
+		<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="https://350action.org/update">350action.org/update</a></p>
 		{% else %}
 			<div class="margin-bottom-normal">
 				{% if page.payment_processor_information.currency == 'AUD' %}
 				<p><strong class="text-small-caps">Donate by Cheque</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org  Limited, Suite 8 / 50 Reservoir Street, Surry Hills, NSW 2010, Australia.</em>.</p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org.au?subject=Question%20about%20donation%20to%20350.org%20Australia">donations@350.org.au</a>.</p>
-				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
+				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="https://350.org/update">350.org/update</a></p>
 				<p>350.org Limited is a registered Australian charity but donations are NOT tax-deductible in Australia. ABN: 46 138 155 192. Some donations for joint work with our partner organisation Friends of the Earth can be made tax deductible. For information about that, please contact <a href="mailto:donations@350.org.au">donations@350.org.au</a>.</p>
 				{% else %}
 					{% filter ak_text:"donate_footer_text_block" %}
 <p><strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</p>
 <p><strong class="text-small-caps">Other Ways To Give:</strong> <a href="https://350.org/other-ways-to-give/">Click here</a> to see additional options, including transferring stock.</p>
 <p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350.org</a>.</p>
-<p><strong class="text-small-caps">Update Your Account:</strong> To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
+<p><strong class="text-small-caps">Update Your Account:</strong> To update your account with a new credit card, new expiration date, or new amount please visit <a href="https://350.org/update">350.org/update</a></p>
 
 <div style="float:left;margin:0 1em 1em 0;"><img src="https://s3.amazonaws.com/s3.350.org/ak/charity_navigator_with_stars.png" style="float: left; height: 40px; margin-right: 10px;"> <img alt="1% For The Planet" src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png" style="float: left; height: 40px; background: #fff; padding: 2px;"></div>
 
