--- a/event_attendee_tools.html
+++ b/event_attendee_tools.html
@@ -150,10 +150,10 @@
 
 			{% if campaign.show_address1 %}
 		<div id="event-attend-map" class="image-link-parent">
-			<a href="http://maps.google.com/maps?daddr={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" target="_blank" title="View in Google Maps"><img src="http://maps.google.com/maps/api/staticmap?sensor=false&size=740x260&markers={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" width="800" height="260" /></a>
+			<a href="https://maps.google.com/maps?daddr={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" target="_blank" title="View in Google Maps"><img src="https://maps.google.com/maps/api/staticmap?sensor=false&size=740x260&markers={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" width="800" height="260" /></a>
 		</div>
 		<div class="text-center text-small event-attend-directions-link event-directions-link">
-			<a class="text-blue text-underline-none opacity-50" href="http://maps.google.com/maps?daddr={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" target="_blank">{% filter ak_text:"event_attend_directions_label" %}Get directions to this event.{% endfilter %}</a>
+			<a class="text-blue text-underline-none opacity-50" href="https://maps.google.com/maps?daddr={{ event.address1|urlencode }}, {{ event.city_etc|urlencode }}" target="_blank">{% filter ak_text:"event_attend_directions_label" %}Get directions to this event.{% endfilter %}</a>
 		</div>
 			{% endif %}
 
