--- a/event_host_details.html
+++ b/event_host_details.html
@@ -66,7 +66,7 @@
 {% endif %}
 	<strong class="text-small2 text-caps opacity-50">{% filter ak_text:"event_details_signup_link" %}Event signup link:{% endfilter %} </strong><br>
 	<div class="event-url">
-		<a href="http://{% client_domain %}{{ event.public_url }}">http://{% client_domain %}{{ event.public_url }}</a>
+		<a href="https://{% client_domain %}{{ event.public_url }}">https://{% client_domain %}{{ event.public_url }}</a>
 	</div>
 </div>
 
