--- a/event_search.html
+++ b/event_search.html
@@ -157,7 +157,7 @@ a.area-link.event-link:hover {
 <script type="text/javascript" src="https://350dotorg.github.io/megamap/js/tabletop.js"></script>
 <script type="text/javascript">
       RAH = {};
-      RAH.sprite_url = "http://s3.amazonaws.com/static.local.350.org/images/map_markers/map-pin-single.png";
+      RAH.sprite_url = "https://s3.amazonaws.com/static.local.350.org/images/map_markers/map-pin-single.png";
       RAH.multiple_sprite_url = "https://s3.amazonaws.com/static.local.350.org/images/map_markers/map-pin-multiple.png";
       // Add locations for plotting on the map
       RAH.event_locations = [];
