--- a/lte.html
+++ b/lte.html
@@ -26,7 +26,7 @@ function toggleChooser(on) {
 
 $("input[name=media_target]").change(function() { toggleChooser(false) } );
 
-// adapted from http://blog.themeforest.net/tutorials/creating-a-jquery-word-counter/
+// adapted from https://blog.themeforest.net/tutorials/creating-a-jquery-word-counter/
 function countWords(textarea) {
 
     var elClass = $(textarea).attr('class');
