--- a/thanks.html
+++ b/thanks.html
@@ -111,13 +111,13 @@
 {% ifequal page.type "Petition" %}
 <div class="taf-option taf-option-4" id="taf-donate" style="display:none;">
 <h5 class="taf-heading">Donate</h5>
-<a class="thanks-donate" href="http://350.org/donate">Donate to 350</a>
+<a class="thanks-donate" href="https://350.org/donate">Donate to 350</a>
 </div>
 {% else %}
 {% ifequal page.type "Call" %}
 <div class="taf-option taf-option-4" id="taf-donate">
 <h5 class="taf-heading">Donate</h5>
-<a id="thanks-donate" href="http://350.org/donate">Donate to 350</a>
+<a id="thanks-donate" href="https://350.org/donate">Donate to 350</a>
 </div>
 {% endifequal %}
 {% endifequal %}
