--- a/event_email_cancelled.html
+++ b/event_email_cancelled.html
@@ -5,7 +5,7 @@ Subject: Your "{{campaign_title}}" event has been cancelled
 
 <p>You can search for other events here:</p>
 
-<p><a href="http://{% client_domain %}/event/{{ campaign.local_name }}/search/">http://{% client_domain %}/event/{{ campaign.local_name }}/search/</a></p>
+<p><a href="https://{% client_domain %}/event/{{ campaign.local_name }}/search/">https://{% client_domain %}/event/{{ campaign.local_name }}/search/</a></p>
 
 <!-- Replacement for unsubscribe. -->
 <p><small>
