--- a/site_404.html
+++ b/site_404.html
@@ -45,7 +45,7 @@ $("#page-header").bigtext({
 <h2 id="page-title">Page not found. :(</h2>
 </div>
 <h4>Sorry, we couldn't find the page you were looking for.</h4>
-<p>Most likely, there was a typo in the <abbr title="The web address of the page. 'http://act.350.org/signup/' is an example of a URL.">URL</abbr>. If the link you clicked to get here came from 350, please <a href="http://350.org/contact/">contact us</a> and let us know our link is broken.</p>
+<p>Most likely, there was a typo in the <abbr title="The web address of the page. 'https://act.350.org/signup/' is an example of a URL.">URL</abbr>. If the link you clicked to get here came from 350, please <a href="https://350.org/contact/">contact us</a> and let us know our link is broken.</p>
 
 
 </div>
