--- a/wrapper.html
+++ b/wrapper.html
@@ -130,14 +130,14 @@ actionkit.forms.initForm('act');
 {% filter collapse_spaces %}
 {% autoescape off %}
 	{% if templateset.custom_fields.site_logo_html %}
-			<a id="footer-logo" href="https://{{ templateset.custom_fields.site_url }}/">
-				{{ templateset.custom_fields.site_logo_html }}
-			</a>
+			{{ templateset.custom_fields.site_logo_html }}
 	{% else %}
 			<span class="text-large2"><a id="footer-logo" class="tf-logo text-large3" href="https://350.org/">350.org</a></span> &nbsp; /
 	{% endif %}
 	{% if templateset.custom_fields.site_footer_menu %}
+		<div class="footer-custom-links">
 			{{ templateset.custom_fields.site_footer_menu }}
+		</div>
 	{% else %}
 			 &nbsp;&nbsp; <a href="{% filter ak_text:"footer_about" %}https://350.org/how{% endfilter %}">{% filter ak_text:"footer_about" %}About{% endfilter %}</a> /{% ifequal page.type "Donation" %} {% else %} <a
 	href="{% filter ak_text:"footer_donate_url" %}https://350.org/donate{% endfilter %}">{% filter ak_text:"footer_donate" %}Donate{% endfilter %}</a> / {% endifequal%}<a id="privacy-link" href="{% filter ak_text:"footer_privacy_url" %}https://350.org/en/privacy{% endfilter %}">{% filter ak_text:"footer_privacy" %}Privacy{% endfilter %}</a> / <a href="{% filter ak_text:"footer_contact_url" %}https://350.org/en/contact/{% endfilter %}">{% filter ak_text:"footer_contact" %}Contact{% endfilter %}</a>
