--- a/password.html
+++ b/password.html
@@ -1,41 +1,43 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags %}
+{% extends "./wrapper.html" %}
+{% load actionkit_tags %}
 
 {% block content %}
-
-<div id="content">
-{% if message %}
-    <p class="loud large">{{ message }}</p>
-{% else %}
-    {% if first %}
-    <h1>Set up your password</h1>
-<p class="lead">Enter your email and we'll send you a link to set up a password so you can log in.</p>
-	
-<p class="lead">If your email address is not recognized as valid, make sure you are using the email address associated with your events or donations at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
-	
-	{% else %}
-    <h1>Reset your password</h1>
-<p class="lead">Fill out the form and we'll send you a link to reset your password.</p>
-	
-<p class="lead">If your email address is not recognized as valid, make sure you are using the email address you used to sign up at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
-
-    {% endif %}
-</div>
-    <form action="{{ app_path }}" method="post" id="login-form" class="login-form">
-<div id="form" class="ak-labels-above">
-{{ form.as_p }}
-      <div class="submit-row">
-        <input type="submit" class="submit" value="Send Password Link" />
-      </div>
-</div>
-    </form>
-    <script type="text/javascript">
-$(document).ready(function(){
-actionkit.forms.installOverlayLabelHandler();
-});
-    document.getElementById('id_email').focus()
-    var email_from_url = {{ email|json }};
-    if (email_from_url) 
-        document.getElementById('login-form').email.value=email;
-    </script>
-{% endif %}
+<section id="action-lead" class="section donate-lead action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+	<div class="section-inner">
+		{% if message %}
+		    <p class="loud large">{{ message }}</p>
+		{% else %}
+		    {% if first %}
+		    <h1>Set up your password</h1>
+		<p class="lead">Enter your email and we'll send you a link to set up a password so you can log in.</p>
+			
+		<p class="lead">If your email address is not recognized as valid, make sure you are using the email address associated with your events or donations at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
+			
+			{% else %}
+		    <h1>Reset your password</h1>
+		<p class="lead">Fill out the form and we'll send you a link to reset your password.</p>
+			
+		<p class="lead">If your email address is not recognized as valid, make sure you are using the email address you used to sign up at 350.org. You can also <a href="http://350.org/signup">click&nbsp;here&nbsp;to sign up</a> and create a new account.</p>
+		
+		    {% endif %}
+		</div>
+		    <form action="{{ app_path }}" method="post" id="login-form" class="login-form">
+		<div id="form" class="ak-labels-above">
+		{{ form.as_p }}
+		      <div class="submit-row">
+		        <input type="submit" class="submit" value="Send Password Link" />
+		      </div>
+		</div>
+		    </form>
+		    <script type="text/javascript">
+		$(document).ready(function(){
+		actionkit.forms.installOverlayLabelHandler();
+		});
+		    document.getElementById('id_email').focus()
+		    var email_from_url = {{ email|json }};
+		    if (email_from_url) 
+		        document.getElementById('login-form').email.value=email;
+		    </script>
+		{% endif %}
+</section>
 {% endblock %}
